<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.valeriu.carnet.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/materie1"
                android:textSize="40sp"
                android:id="@+id/button1"
                android:background="@android:color/transparent"
                android:onClick="openMaterie1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/materie2"
                android:textSize="40sp"
                android:id="@+id/button2"
                android:background="@android:color/transparent"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/materie3"
                android:textSize="40sp"
                android:id="@+id/button3"
                android:background="@android:color/transparent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/materie4"
                android:textSize="40sp"
                android:id="@+id/button4"
                android:background="@android:color/transparent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/materie5"
                android:textSize="40sp"
                android:id="@+id/button5"
                android:background="@android:color/transparent"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/materie6"
                android:textSize="40sp"
                android:id="@+id/button6"
                android:background="@android:color/transparent"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="right"
                android:textSize="40sp"
                android:id="@+id/medie1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="right"
                android:text="@string/medie2"
                android:textSize="40sp"
                android:id="@+id/medie2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="right"
                android:text="@string/medie3"
                android:textSize="40sp"
                android:id="@+id/medie3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="right"
                android:text="@string/medie4"
                android:textSize="40sp"
                android:id="@+id/medie4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="right"
                android:text="@string/medie5"
                android:textSize="40sp"
                android:id="@+id/medie5"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="right"
                android:text="@string/medie6"
                android:textSize="40sp"
                android:id="@+id/medie6"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
