<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.valeriu.carnet.Materie1Activity"
    tools:showIn="@layout/activity_materie1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:weightSum="5">

        <EditText
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:inputType="number"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/MateNota1"
            android:hint="@string/nota1"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:inputType="number"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/MateNota2"
            android:hint="@string/nota2"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:inputType="number"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/MateNota3"
            android:hint="@string/nota3"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:inputType="number"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/MateNota4"
            android:hint="@string/nota4"
            android:gravity="center"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:inputType="number"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/MateNota5"
            android:hint="@string/nota5"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:weightSum="8">

        <EditText
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/Teza"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/MateTeza"
            android:gravity="center"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="4"
            android:text="@string/Calculeaza"
            android:onClick="calculeazaMedie"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/Medie"
            android:id="@+id/MateMedie"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Sugestii"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/MateSugestii" />
    </LinearLayout>

</LinearLayout>
